add lasagna img

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1> 
         "Odin Recipes"
-        <a href="recipes/lasagna.html">Awesome lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Awesome lasagna</a></li>
+        </ul>
     </h1>
 </body>
 </html>
