--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,9 @@
     <h1>
         Awesome lasagna
     </h1>
+    <img src="../img/lasagna.jpg">
+    <h2>
+        How to make lasagna 
+    </h2>
 </body>
 </html>
