--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> 
-        "Odin Recipes"
+        Odin Recipes
         <ul>
             <li><a href="recipes/lasagna.html">Awesome lasagna</a></li>
         </ul>
