--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,43 @@
     </h1>
     <img src="../img/lasagna.jpg">
     <h2>
-        How to make lasagna 
+        Description 
     </h2>
+        <p> 
+            Here's how to make a classic lasagna with beef, onion, garlic, and more!
+        </p>
+    <h2>
+        Ingredients
+    </h2>
+        <ul>
+            <li>1 pound ground beef</li>
+            <li>1 onion, chopped</li>
+            <li>2 cloves garlic, minced</li>
+            <li>24-ounce jar of marinara sauce</li>
+            <li>15 ounces ricotta cheese</li>
+            <li>1 egg</li>
+            <li>Fresh parsley, chopped (about a small handful)</li>
+            <li>9x13-inch baking dish</li>
+            <li>Uncooked lasagna noodles (9-12, depending on dish size)</li>
+            <li>2 cups shredded mozzarella cheese</li>
+            <li>1/2 cup grated Parmesan cheese</li>
+        </ul>
+    <h2>
+        Steps 
+    </h2>
+        <ol>
+            <li>Preheat oven to 375°F (190°C).</li>
+            <li>In a large skillet, brown the ground beef over medium heat. Add the chopped onion and minced garlic, and cook until the onion is soft.</li>
+            <li>Stir in the marinara sauce and let it simmer while you prepare the other ingredients.</li>
+            <li>In a bowl, mix the ricotta cheese with the egg and chopped fresh parsley.</li>
+            <li>Spread a thin layer of meat sauce on the bottom of the baking dish.</li>
+            <li>Add a layer of uncooked lasagna noodles over the meat sauce.</li>
+            <li>Spread a layer of the ricotta mixture over the noodles.</li>
+            <li>Top with a layer of shredded mozzarella cheese and a sprinkling of grated Parmesan cheese.</li>
+            <li>Repeat the layers two more times, ending with a final layer of meat sauce and a topping of shredded mozzarella and grated Parmesan cheese.</li>
+            <li>Cover the baking dish with aluminum foil and bake for 25 minutes.</li>
+            <li>Remove the foil and continue baking for another 25 minutes, or until the lasagna is bubbly and golden on top.</li>
+            <li>Let the lasagna rest for 10 minutes before cutting and serving.</li>
+        </ol>
 </body>
 </html>
