--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         Odin Recipes
         <ul>
             <li><a href="recipes/lasagna.html">Awesome lasagna</a></li>
+            <li><a href="recipes/gummy.html">Gum gum</a></li>
+            <li><a href="recipes/lasagna.html">Awesome lasagna</a></li>
         </ul>
     </h1>
 </body>
