--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Awesome lasagna</a></li>
             <li><a href="recipes/gummy.html">Gum gum</a></li>
-            <li><a href="recipes/lasagna.html">Awesome lasagna</a></li>
+            <li><a href="recipes/macaron.html">sweet macaron</a></li>
         </ul>
     </h1>
 </body>
